kubernetes/pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: ubuntu-qa
  namespace: daystride


spec:
  containers:
    - name: ubu
      image: edon505/ubuntu-qa:latest
      command: [ "tail", "-f", "/dev/null" ]
