kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: daystride

spec:
  type: ClusterIP
  selector:
    app: backend

  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: daystride

spec:
  replicas: 5
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  revisionHistoryLimit: 8
  minReadySeconds: 10
  progressDeadlineSeconds: 300

  template:
    metadata:
      namespace: daystride
      labels:
        app: backend

    spec:
      containers:
        - name: backend-container
          image: edon505/daystride-backend:latest
          ports:
            - containerPort: 8080
