kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: daystride
spec:
  type: ClusterIP
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: daystride

spec:
  replicas: 5
  selector:
    matchLabels:
      app: frontend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  revisionHistoryLimit: 8
  minReadySeconds: 10
  progressDeadlineSeconds: 300

  template:
    metadata:
      namespace: daystride
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend-container
          image: edon505/daystride-frontend:latest
          ports:
            - containerPort: 80
